cmake_minimum_required(VERSION 3.6)
project(ccalc)

set(SOURCE_FILES main.c)
add_executable(${PROJECT_NAME} ${SOURCE_FILES})

set(IN_OPENWRT $ENV{IN_OPENWRT})
IF (IN_OPENWRT)
add_definitions("$ENV{TARGET_LDFLAGS}" "$ENV{TARGET_CFLAGS}")
include_directories("$ENV{TARGET_LDFLAGS}" "$ENV{TARGET_CFLAGS}")
target_link_libraries(${PROJECT_NAME} c gcc_s "$ENV{TARGET_LDFLAGS}")
set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "-nodefaultlibs -fno-builtin -fno-rtti -nostdlib")
ELSE (IN_OPENWRT)
add_definitions("-Wall -g")
install(PROGRAMS ${PROJECT_NAME} DESTINATION /usr/bin)
add_custom_target(uninstall COMMAND "rm" -f "/usr/bin/${PROJECT_NAME}")
ENDIF(IN_OPENWRT)
